# Car-simulator

./: .gitignore  ARCHITECTURE_REVIEW.md  CMakeLists.txt  PROJECT_VERIFICATION.md  README.md  imgui.ini  run_tests.sh  todo.md
.github/workflows/: cmake-multi-platform.yml
assets/: body.mtl  steeringwheel.mtl
assets/wheels/: RLwheel.mtl
include/audio/: audio_manager.hpp
include/core/: game.hpp  game_config.hpp  game_object.hpp  game_object_manager.hpp  object_sizes.hpp  obstacle.hpp  obstacle_manager.hpp  powerup.hpp  powerup_manager.hpp  random_position_generator.hpp  vehicle.hpp  vehicle_tuning.hpp
include/core/interfaces/: IControllable.hpp  IVehicleState.hpp
include/graphics/: game_object_renderer.hpp  obstacle_renderer.hpp  powerup_renderer.hpp  scene_manager.hpp  vehicle_renderer.hpp
include/input/: input_handler.hpp
include/ui/: imgui_context.hpp  imgui_layer.hpp
src/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt  audioManager.cpp  audioManager.hpp  audio_manager.cpp  audio_manager.hpp
src/core/: CMakeLists.txt  game.cpp  gameObject.cpp  gameObject.hpp  game_object.cpp  game_object.hpp  game_object_manager.hpp  obstacle.cpp  obstacle.hpp  obstacle_manager.cpp  obstacle_manager.hpp  powerup.cpp  powerup.hpp  powerup_manager.cpp  powerup_manager.hpp  vehicle.cpp  vehicle.hpp  vehicle_tuning.hpp
src/graphics/: CMakeLists.txt  gameObjectRenderer.cpp  gameObjectRenderer.hpp  game_object_renderer.cpp  game_object_renderer.hpp  obstacle_renderer.cpp  obstacle_renderer.hpp  powerup_renderer.cpp  powerup_renderer.hpp  sceneManager.cpp  sceneManager.hpp  scene_manager.cpp  scene_manager.hpp  vehicleRenderer.cpp  vehicleRenderer.hpp  vehicle_renderer.cpp  vehicle_renderer.hpp
src/input/: CMakeLists.txt  inputHandler.cpp  inputHandler.hpp  input_handler.cpp  input_handler.hpp
src/physics/: physics.cpp  physics.hpp
src/ui/: CMakeLists.txt  imgui_context.cpp  imgui_layer.cpp  imgui_layer.hpp  uiManager.cpp  uiManager.hpp  ui_manager.cpp  ui_manager.hpp
tests/: CMakeLists.txt  test_collision.cpp  test_gameObject.cpp  test_managers.cpp  test_obstacle_powerup.cpp  test_validation.cpp  test_vehicle.cpp
